tests/ui/traits/next-solver/env-shadows-impls/param-candidate-shadows-project.stderr
error[E0277]: the trait bound `T: Bar` is not satisfied
  --> $DIR/param-candidate-shadows-project.rs:27:19
   |
LL |     require_bar::<T>();
   |                   ^ the trait `Bar` is not implemented for `T`
   |
note: required by a bound in `require_bar`
  --> $DIR/param-candidate-shadows-project.rs:15:19
   |
LL | fn require_bar<T: Bar>() {}
   |                   ^^^ required by this bound in `require_bar`
help: consider further restricting this bound
   |
LL | fn foo<T: Foo + Bar>() {
   |               +++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
